--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Entaloneralie</title>
-    <script src="scripts/entaloneralie.js"></script>
+    <title>Gaea</title>
+    <script src="scripts/gaea.js"></script>
     <script src="scripts/calendar.js"></script>
     <script src="scripts/clock.js"></script>
     <link rel="stylesheet" href="links/reset.css"/>
@@ -12,8 +12,8 @@
   </head>
   <body>
     <script type="text/javascript">
-      var entaloneralie = new Entaloneralie();
-      entaloneralie.start();
+      var gaea = new Gaea();
+      gaea.start();
     </script>
   </body>
 </html>
