--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="links/main.css"/>
   </head>
   <body>
-    <a href="https://github.com/nomand/Gaea" title="What is this thing?" id="help" >?</a>
+    <a href="https://github.com/nomand/Gaea" title="What is this thing?" id="help" >△</a>
     <script type="text/javascript">
       var gaea = new Gaea();
       gaea.start();
